fix(tasks): ios offset on unwrap

--- a/challenges/styles/base.css
+++ b/challenges/styles/base.css
@@ -229,7 +229,7 @@ header {
 }
 
 .task-unwrap .task-action {
-  -webkit-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
+  -webkit-transform: scaleY(-1);
+  -ms-transform: scaleY(-1);
+  transform: scaleY(-1);
 }
